# wallet_api_test

./: .dockerignore  LICENSE  Makefile  README.md  compose.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/migrations/: env.py
backend/migrations/versions/: 2025_08_29_0309-994292628162_.py
backend/src/app/: common_types.py  main.py
backend/src/app/application/wallets/: dto.py  enums.py  errors.py  repositories.py  services.py
backend/src/app/domain/: entities.py  errors.py  value_objects.py
backend/src/app/infrastructure/database/: __init__.py  db.py  migrations.py
backend/src/app/infrastructure/database/base/: __init__.py  common_types.py  mappers.py  models.py  repositories.py
backend/src/app/infrastructure/database/wallets/: mappers.py  models.py  repositories.py
backend/src/app/presentation/: deps.py  router.py
backend/src/app/presentation/wallets/: deps.py  router.py  schemas.py
backend/src/config/: app.py  database.py
backend/tests/: conftest.py
backend/tests/test_db/: test_connection.py  test_tables.py
