[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "faker>=37.5.3",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.10",
    "testcontainers>=4.12.0",
]

[tool.ruff]
line-length = 100
fix = true
exclude = [
    "migrations/",
    "src/app/infrastracture/database/migrations.py",
    "**/__init__.py",
]


[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [
    "migrations/",
    "src/app/infrastracture/database/migrations.py",
    "**/__init__.py",
]


[tool.pytest.ini_options]
pythonpath = [
    ".",
]
asyncio_mode = "auto"
